fix: sub settings input overflowing in firefox

--- a/src/player.styles.css
+++ b/src/player.styles.css
@@ -458,6 +458,7 @@
             outline: none;
             border-radius: 3px;
             font-family: monospace;
+            max-width: 95%;
         }
 
         & .settings-entry {
